--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,7 @@
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/catalog.js"></script>
     <script src="scripts/controllers/about.js"></script>
+    <script src="scripts/directives/cart.js"></script>
     <script src="scripts/directives/link.js"></script>
     <script src="scripts/services/device.js"></script>
     <script src="scripts/services/cart.js"></script>
